--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,8 @@ repositories {
 
 dependencies {
     compile group: 'org.ejml', name: 'all', version: '0.27'
+    
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
